--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-configobj==5.0.6
-gunicorn==19.9.0
-psutil==5.4.2
-pycairo==1.16.2
-pycrypto==2.6.1
-pyudev==0.21.0
-pyxdg==0.25
-setproctitle==1.1.10
-six==1.11.0
+Flask
+gunicorn
